--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ p.hidden {border-style:hidden;}
 <img src="./portrait.JPG"	alt="Yuan Zhang" align="left" />
 </td>
 <td valign="top">
-<p><i><b>Yuan Zhang</b><br>Assistant Professor<br> Department of Statistics<br>Ohio State University<br><br>
+<p><i><b>Yuan Zhang</b><br>Assistant Professor<br> Department of Statistics<br>The Ohio State University<br><br>
 <b>Address</b><br> 229 Cockins Hall <br> 1958 Neil Avenue<br> Columbus, OH 43210 <br><br> <b>Email</b><br> 
 <a href="mailto:yzhanghf@stat.osu.edu">yzhanghf@stat.osu.edu</a> <br> (The ``hf'' stands for my hometown <a href="http://en.wikipedia.org/wiki/Hefei", style="text-decoration: none">Hefei, China</a>.)</i></p>
 </td>
@@ -71,14 +71,20 @@ p.hidden {border-style:hidden;}
 <ul>
 
 <li>
-Edgeworth expansions for network moments<br>
+<span style="COLOR: BLACK">Edgeworth expansions for network moments</span><a href="https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb", style="text-decoration: none">PDF</a><br>
 <span style="COLOR: #000080">Yuan Zhang and Dong Xia</span><br>
 <span style="COLOR: #21618C">Annals of Statistics, 2021+</span><br>
 </li>
 
+<li>
+<span style="COLOR: BLACK">L-2 Regularized maximum likelihood for &beta;-model in large and sparse networks</span><a href="https://arxiv.org/pdf/2110.11856", style="text-decoration: none">PDF</a><br>
+<span style="COLOR: #000080">Yu Zhang, Qiuping Wang, Yuan Zhang, Ting Yan and Jing Luo</span><br>
+</li>
+
 
 <li>
-<a href="https://arxiv.org/abs/1807.11027", style="text-decoration: none">Consistent polynomial-time unseeded graph matching for Lipschitz graphons</a> <br> Y. Zhang <br>
+<span style="COLOR: BLACK">Consistent polynomial-time unseeded graph matching for Lipschitz graphons</span><a href="https://arxiv.org/abs/1807.11027", style="text-decoration: none">PDF</a><br>
+<span style="COLOR: #000080">Yuan Zhang</span><br>
 </li>
 
 <br>
