--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@ p.hidden {border-style:hidden;}
 <ul>
 
 <li>
-<span style="COLOR: BLACK">Edgeworth expansions for network moments</span><a href="https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb", style="text-decoration: none">PDF</a><br>
+<span style="COLOR: BLACK">Edgeworth expansions for network moments</span> [<a href="https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb", style="text-decoration: none">PDF</a>]<br>
 <span style="COLOR: #000080">Yuan Zhang and Dong Xia</span><br>
 <span style="COLOR: #21618C">Annals of Statistics, 2021+</span><br>
 </li>
+<br>
 
 <li>
-<span style="COLOR: BLACK">L-2 Regularized maximum likelihood for &beta;-model in large and sparse networks</span><a href="https://arxiv.org/pdf/2110.11856", style="text-decoration: none">PDF</a><br>
+<span style="COLOR: BLACK">L-2 Regularized maximum likelihood for &beta;-model in large and sparse networks</span> [<a href="https://arxiv.org/pdf/2110.11856", style="text-decoration: none">PDF</a>]<br>
 <span style="COLOR: #000080">Yu Zhang, Qiuping Wang, Yuan Zhang, Ting Yan and Jing Luo</span><br>
 </li>
-
+<br>
 
 <li>
 <span style="COLOR: BLACK">Consistent polynomial-time unseeded graph matching for Lipschitz graphons</span><a href="https://arxiv.org/abs/1807.11027", style="text-decoration: none">PDF</a><br>
