--- a/index.html
+++ b/index.html
@@ -55,128 +55,362 @@ p.hidden {border-style:hidden;}
 	<col width="430" />
 <tr>
 <td>
-<img src="./portrait.JPG"	alt="Yuan Zhang" align="left" />
+<img src="portrait.jpg"	alt="Yuan Zhang" align="left" />
 </td>
 <td valign="top">
-<p><i><b>Yuan Zhang</b><br>Assistant Professor<br> Department of Statistics<br>The Ohio State University<br><br>
-<b>Address</b><br> 229 Cockins Hall <br> 1958 Neil Avenue<br> Columbus, OH 43210 <br><br> <b>Email</b><br> 
-<a href="mailto:yzhanghf@stat.osu.edu">yzhanghf@stat.osu.edu</a> <br> (The ``hf'' stands for my hometown <a href="http://en.wikipedia.org/wiki/Hefei", style="text-decoration: none">Hefei, China</a>.)</i></p>
+<p><i><b>Yuan Zhang</b><br>Associate Professor<br> Department of Statistics<br>The Ohio State University<br><br>
+<b>Address</b><br> 440G Cockins Hall <br> 1958 Neil Avenue<br> Columbus, OH 43210 <br><br> <b>Email</b><br> 
+<a href="mailto:yzhanghf@stat.osu.edu">yzhanghf@stat.osu.edu</a> <br> (The ``hf'' stands for my hometown <a href="http://en.wikipedia.org/wiki/Hefei", style="text-decoration: none">Hefei, Anhui, China</a>.)</i></p>
 </td>
 </tr>
 </table>
 
 <p class="ridge">
 
-<h3>Papers</h3>
+<br>
+<h3>PhD alumni</h3>
+<ul>
+  <li>
+    <a href="https://www.linkedin.com/in/meijia-shao/">Meijia Shao</a>
+    <br>
+    Graduation: December 2023 (<a href="https://etd.ohiolink.edu/acprod/odb_etd/r/etd/search/10?p10_accession_num=osu1699978645515057&clear=10&session=12329076182476">Thesis</a>)
+    <br>
+    Honor: 2023--2024 <a href="https://stat.osu.edu/newsletter/stat-50-december/department-awards-announced-spring-2024">Whitney Research Award</a>, Department of Statistics, Ohio State University
+    <br>
+    First position: Meta Platforms (Menlo Park)
+  </li>
+</ul>
+
+<h3>Current PhD students</h3>
+<ul>
+  <li>
+    Torey Hilbert (co-advised with Steven MacEachern)
+  </li>
+  <li>
+    Kiljae Lee
+  </li>
+  <li>
+    Fangyi Wang (co-advised with Sebastian Kurtek)
+  </li>
+  <li>
+    Qian Zhou
+  </li>
+</ul>
+
+
+<p class="ridge">
+
+
+<h3>Representative papers</h3>
 <ul>
 
+
 <li>
-<span style="COLOR: BLACK">Edgeworth expansions for network moments</span> [<a href="https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb", style="text-decoration: none">PDF</a>]<br>
+<span style="COLOR: BLACK">Higher-order accurate two-sample network inference and network hashing</span> [<a href="https://arxiv.org/pdf/2208.07573.pdf", style="text-decoration: none">PDF</a>]
+[<a href="https://github.com/yzhanghf/2025-Singapore-network-tutorial/blob/main/Network_two_sample_test_talk.pdf", style="text-decoration: none">Slides</a>][<a href="https://github.com/MjiaShao/Network-two-sample-test", style="text-decoration: none">MATLAB code</a>]
+<br>
+<span style="COLOR: #000080">Meijia Shao, Dong Xia, Yuan Zhang, Qiong Wu and Shuo Chen</span><br>
+<span style="BACKGROUND-COLOR: #10147e; COLOR: #f4f5f9">Journal of the American Statistical Association</span>, In press, 2025+
+</li>
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">Leave-one-out stable conformal prediction</span> [<a href="https://arxiv.org/pdf/2504.12189", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Kiljae Lee and Yuan Zhang</span><br>
+<span style="BACKGROUND-COLOR: #212529; COLOR: #f4f5f9">ICLR</span>, 2025
+</li>
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">U-statistic reduction: higher-order accurate risk control and statistical-computational trade-off, with application to network method-of-moments</span> [<a href="https://arxiv.org/pdf/2306.03793.pdf", style="text-decoration: none">PDF</a>] 
+<br>
+<span style="COLOR: #000080">Meijia Shao, Dong Xia and Yuan Zhang</span><br><br>
+Part I of this paper published as:<br>
+<span style="COLOR: BLACK">U-statistic reduction: higher-order accurate risk control and statistical-computational trade-off</span> [<a href="Shao_Xia_Zhang_U_statistic_reduction.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/JASA-TM-2022-0839", style="text-decoration: none">Code</a>]<br> 
+<span style="COLOR: #000080">Meijia Shao, Dong Xia and Yuan Zhang</span><br>
+<span style="BACKGROUND-COLOR: #10147e; COLOR: #f4f5f9">Journal of the American Statistical Association</span>, In press, 2025+
+</li>
+<br>
+
+<li>
+<span style="COLOR: BLACK">Edgeworth expansions for network moments</span> [<a href="AOS-2125.pdf", style="text-decoration: none">PDF</a>]
+[<a href="https://github.com/yzhanghf/NetworkEdgeworthExpansion/blob/main/Network-Method-of-Moments.pdf", style="text-decoration: none">Slides</a>]
+<!--"https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb"-->
+[<a href="https://github.com/yzhanghf/NetworkEdgeworthExpansion", style="text-decoration: none">MATLAB code</a>]
+<br>
 <span style="COLOR: #000080">Yuan Zhang and Dong Xia</span><br>
-<span style="COLOR: #21618C">Annals of Statistics, 2021+</span><br>
+<span style="BACKGROUND-COLOR: #bcdced; COLOR: #24211e">Annals of Statistics</span>, 2022<br>
+</li>
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">Estimating network edge probabilities by neighborhood smoothing</span>
+[<a href="main.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/NeighborhoodSmoothing", style="text-decoration: none">MATLAB code</a>] [<a href="https://github.com/yunjhongwu/matrix-routines", style="text-decoration: none">Python code</a> (by Yun-Jhong Wu)]
+<br> 
+<span style="COLOR: #000080">Yuan Zhang, Elizaveta Levina and Ji Zhu</span><br>
+Student Paper Award, 2016 American Statistical Association Section on Nonparametric Statistics<br>
+<span style="BACKGROUND-COLOR: #fdc9a1; COLOR: #24211e">Biometrika</span>, 2017
+</li>
+<br>
+
+
+
+<li>
+<span style="COLOR: BLACK">L-2 Regularized maximum likelihood for &beta;-model in large and sparse networks</span> [<a href="https://arxiv.org/pdf/2110.11856", style="text-decoration: none">PDF</a>]
+[<a href="https://github.com/MjiaShao/L2-beta-model", style="text-decoration: none">MATLAB code</a>]<br>
+<span style="COLOR: #000080">Meijia Shao, Yu Zhang, Qiuping Wang, Yuan Zhang, Jing Luo and Ting Yan</span><br>
+In submission
+</li>
+<br>
+
+
+
+<li>
+<span style="COLOR: BLACK">Distribution-free matrix prediction under arbitrary missing pattern</span> [<a href="https://arxiv.org/pdf/2305.11640.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/MjiaShao/Matrix-prediction-CP", style="text-decoration: none">MATLAB code</a>]
+<br>
+<span style="COLOR: #000080">Meijia Shao and Yuan Zhang</span><br>
+In submission
+</li>
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">Faithful Group Shapley Value</span> [<a href="https://arxiv.org/abs/2505.19013", style="text-decoration: none">PDF</a>] [<a href="https://github.com/KiljaeL/Faithful_GSV", style="text-decoration: none">Code</a>]
+<br>
+<span style="COLOR: #000080">Kiljae Lee, Ziqi Liu, Weijing Tang and Yuan Zhang</span><br>
+In submission
+</li>
+<br>
+
+
+
+
+</ul>
+
+<p class="ridge">
+
+<h3>Other papers</h3>
+<ul>
+    
+    <li>
+    <span style="COLOR: BLACK">Evaluating the effects of high-throughput structural neuroimaging predictors on whole-brain functional connectome outcomes via network-based matrix-on-vector regression</span>
+    [<a href="https://arxiv.org/abs/2310.18533", style="text-decoration: none">PDF</a>]
+    <br>
+    <span style="COLOR: #000080">Tong Lu, Yuan Zhang, Vince Lyzinski, Chuan Bi, Peter Kochunov, Elliot Hong and Shuo Chen</span><br>
+    Biometrics, 2025
+    <br>
+    </li>
+    <br>
+
+<li>
+<span style="COLOR: BLACK">A multivariate to multivariate approach for voxel-wise genome-wide association analysis</span>
+[<a href="https://www.biorxiv.org/content/10.1101/2021.11.02.467021v1.full", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Qiong Wu, Yuan Zhang, Xiaoqi Huang, Tianzhou Ma, Elliot Hong, Peter Kochunov and Shuo Chen</span><br>
+Statistics in Medicine, 2024
+<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Network method for voxel-pair-level brain connectivity data with spatial contiguity constraint</span>
+[<a href="https://arxiv.org/abs/2305.01596", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Tong Lu, Yuan Zhang, Peter Kochunov, Elliot Hong and Shuo Chen</span><br>
+Annals of Applied Statistics, 2024
+<br>
+</li>
+
+<br>
+
+
+<li>
+    <span style="COLOR: BLACK">An in-depth association analysis of genetic variants within nicotine-related loci: Meeting in middle of GWAS and genetic fine-mapping</span>
+    [<a href="https://doi.org/10.1016/j.mcn.2023.103895", style="text-decoration: none">PDF</a>]
+    <br>
+    <span style="COLOR: #000080">Chen Mo, Zhenyao Ye, Yezhi Pan, Yuan Zhang, Qiong Wu, Chuan Bi, Song Liu, Braxton Mitchell, Peter Kochunov, L. Elliot Hong, Tianzhou Ma, Shuo Chen</span><br>
+    Molecular and Cellular Neuroscience, 2023
+    <br>
 </li>
 <br>
 
 <li>
-<span style="COLOR: BLACK">L-2 Regularized maximum likelihood for &beta;-model in large and sparse networks</span> [<a href="https://arxiv.org/pdf/2110.11856", style="text-decoration: none">PDF</a>]<br>
-<span style="COLOR: #000080">Yu Zhang, Qiuping Wang, Yuan Zhang, Ting Yan and Jing Luo</span><br>
+<span style="COLOR: BLACK">Latent space model for higher-order networks and generalized tensor decomposition</span>
+[<a href="https://arxiv.org/abs/2106.16042", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Zhongyuan Lyu, Dong Xia and Yuan Zhang</span><br>
+Journal of Computational and Graphical Statistics, 2023
+<br>
 </li>
+
 <br>
 
 <li>
-<span style="COLOR: BLACK">Consistent polynomial-time unseeded graph matching for Lipschitz graphons</span><a href="https://arxiv.org/abs/1807.11027", style="text-decoration: none">PDF</a><br>
+<span style="COLOR: BLACK">Identifying covariate-related subnetworks for whole-brain connectome analysis</span>
+[<a href="https://academic.oup.com/biostatistics/advance-article-abstract/doi/10.1093/biostatistics/kxad007/7111988?utm_source=advanceaccess&utm_campaign=biostatistics&utm_medium=email", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Shuo Chen, Yuan Zhang, Qiong Wu, Chuan Bi, Peter Kochunov and Elliot Hong</span><br>
+Biostatistics, 2023
+<br>
+</li>
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">Asymptotic theory in bipartite graph models with a growing number of parameters</span>
+[<a href="Fan-bipartite-2022.pdf", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Yifan Fan, Binyan Jiang, Ting Yan and Yuan Zhang</span><br>
+Canadian Journal of Statistics, 2023
+<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Time-varying &beta;-model for dynamic directed networks</span>
+[<a href="dynamicbetamodel.pdf", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Yuqing Du, Lianqiang Qu, Ting Yan and Yuan Zhang</span><br>
+Scandinavian Journal of Statistics, 2023
+<br>
+</li>
+
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">Asymptotic theory in network models with covariates and a growing number of node parameters</span>
+[<a href="https://link.springer.com/article/10.1007/s10463-022-00848-0", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Qiuping Wang, Yuan Zhang and Ting Yan</span><br>
+Annals of the Institute of Statistical Mathematics, 2022
+<br>
+</li>
+
+<br>
+
+
+<li>
+<span style="COLOR: BLACK">ICN: extracting interconnected communities in gene co-expression networks</span>
+[<a href="https://academic.oup.com/bioinformatics/article-abstract/37/14/1997/6122693", style="text-decoration: none">PDF</a>]
+<br>
+<span style="COLOR: #000080">Qiong Wu, Tianzhou Ma, Qingzhi Liu, Donald K Milton, Yuan Zhang, Shuo Chen</span><br>
+Bioinformatics, 2021
+<br>
+</li>
+
+<br>
+
+
+
+
+
+
+
+
+
+
+<li>
+<span style="COLOR: BLACK">Detecting overlapping communities in networks using spectral methods</span>
+[<a href="https://epubs.siam.org/doi/abs/10.1137/19M1272238", style="text-decoration: none">PDF</a>] <a href="https://github.com/yzhanghf/OCCAM", style="text-decoration: none">[MATLAB code]</a> <br>
+<span style="COLOR: #000080">Yuan Zhang, Elizaveta Levina and Ji Zhu</span><br>
+SIAM Journal on Mathematics of Data Science, 2020<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Community detection in networks with node features</span>
+[<a href="https://projecteuclid.org/journals/electronic-journal-of-statistics/volume-10/issue-2/Community-detection-in-networks-with-node-features/10.1214/16-EJS1206.full", style="text-decoration: none">PDF</a>] [<a href="JCDC.zip", style="text-decoration:none">R code</a>
+(Run "JCDC.r", requires library "RcppArmadillo")]
+<br>
+<span style="COLOR: #000080">Yuan Zhang, Elizaveta Levina and Ji Zhu</span><br>
+Best Student Paper Award, workshop ``Frontiers of Network Analysis: Methods, Models, and Applications'', NIPS 2013<br>
+Electronic Journal of Statistics, 2016
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Joint Registration and Conformal Prediction for Partially Observed Functional Data</span>
+[<a href="Functional_CP_compressed.pdf", style="text-decoration: none">PDF</a>] <br>
+<span style="COLOR: #000080">Fangyi Wang, Sebastian Kurtek and Yuan Zhang</span><br>
+In submission<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Robust Distribution-Free Tests for the Linear Model</span>
+[<a href="https://arxiv.org/abs/2501.00583", style="text-decoration: none">PDF</a>] <br>
+<span style="COLOR: #000080">Torey Hilbert, Steven MacEachern and Yuan Zhang</span><br>
+In submission<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Optimal Nonparametric Inference on Network Effects with Dependent Edges</span>
+[<a href="https://arxiv.org/abs/2401.03072", style="text-decoration: none">PDF</a>] <br>
+<span style="COLOR: #000080">Wenqin Du, Yuan Zhang and Wen Zhou</span><br>
+In submission<br>
+</li>
+
+<br>
+
+<li>
+<span style="COLOR: BLACK">Consistent polynomial-time unseeded graph matching for Lipschitz graphons</span>[<a href="https://arxiv.org/abs/1807.11027", style="text-decoration: none">PDF</a>]<br>
 <span style="COLOR: #000080">Yuan Zhang</span><br>
+In preparation<br>
 </li>
 
 <br>
 
 <li>
-<a href="https://arxiv.org/abs/1807.04680", style="text-decoration: none">Unseeded low-rank graph matching by transform-based unsupervised point registration</a> <br> Y. Zhang <br>
+<span style="COLOR: BLACK">Unseeded low-rank graph matching by transform-based unsupervised point registration</span>
+[<a href="https://arxiv.org/abs/1807.04680", style="text-decoration: none">PDF</a>] <br>
+<span style="COLOR: #000080">Yuan Zhang</span><br>
+In preparation<br>
 </li>
 
 <br>
 
-<li>
-<a href="main.pdf", style="text-decoration: none">Estimating network edge probabilities by neighborhood smoothing</a> <a href="NeighborhoodSmoothing.zip", style="text-decoration: none">[MATLAB code]</a> (For a faster Python implementation by <a href="http://www.linkedin.com/in/yunjhongwu/", style="text-decoration: none">Yun-Jhong Wu</a>, see <a href="https://github.com/yunjhongwu/matrix-routines", style="text-decoration: none">[Python code]</a>) <br> Y. Zhang, E. Levina and J. Zhu<br>
-Winner of 2016 American Statistical Association Section on Nonparametric Statistics Student Paper Award<br>
-Biometrika, In Press
-</li>
 
-<br>
-
-<li>
-<a href="http://arxiv.org/abs/1412.3432", style="text-decoration: none">Detecting overlapping communities in networks using spectral methods</a> <a href="OCCAM.zip", style="text-decoration: none">[MATLAB code]</a> <br> Y. Zhang, E. Levina and J. Zhu<br>
-</li>
-
-<br>
-
-<li>
-<a href="http://arxiv.org/abs/1509.01173", style="text-decoration: none">Community detection in networks with node features</a> <a href="JCDC.zip", style="text-decoration:none">[R code]</a> (Run "JCDC.r", requires R packages "Rcpp" and "RcppArmadillo") <br> Y. Zhang, E. Levina and J. Zhu<br>
-Short version won a Best Student Paper Award at the workshop ``Frontiers of Network Analysis: Methods, Models, and Applications'', NIPS 2013<br>
-Electronic Journal of Statistics, In Press
-</li>
 
 
 </ul>
-
-<h3>Teaching experiences</h3>
-
-
-
-
-Graduate Student Instructor (GSI):
-<ul>
-<li>Fall 2011 & Winter 2012: <i>STATS 250: Introduction to Statistics and Data Analysis</i>
-<li>Fall 2012: <i>STATS 425: Introduction to Probability</i> and <i>STATS 620: Applied Probability and Stochastic Modeling</i>
-<li>Winter 2013: <i>STATS 425: Introduction to Probability</i> and <i>STATS 601: Analysis of Multivariate and Categorical Data</i>
-<li>Fall 2015: for <i>STATS 406: Introduction to Statistical Computing</i><br>
-<b>Outstanding teaching award 2015-2016</b>
-<li>Winter 2016: for <i>STATS 509: Statistics for Financial Data</i> 
-</ul>
-
-Consultant and Tutor:
-<ul>
-<li>Summer 2012: Experienced GSI Consultant at <i>ELI 994 summer workshop</i>, held by English Language Institute(ELI), University of Michigan
-<br>
-<li>Summer 2015: Tutor for PhD student qualifying exam (Applied Statistics series), Department of Statistics, University of Michigan</i>
-
-</ul>
-
-<h3>Selected awards</h3>
-<ul>
-<li>2007 Chinese Mathematical Olympiad National Final, Bronze Medal
-<li>2008-2009 Gold Outstanding Student Scholarship, University of Science and Technology of China
-<li>2009-2010 National Scholarship, Ministry of Education of China
-<li>2011-2012 Outstanding First Year PhD Student Award, Department of Statistics, University of Michigan
-</ul>
-
 
 <p class="ridge"></p>
 
 <center>
-<!--<address><font size="4.5">Quote: "Noblesse Oblige"</font></address>-->
+	<!--<address><font size="4.5">Quote: "Noblesse Oblige"</font></address>-->
 <address><font size="4.5">Quote: "Attendre et esp&eacuterer"</font></address>
 <br>
-<address><font size="4.5">Last update: 26 August 2018</font></address>
+<address><font size="4.5">Last update: 30 May 2025</font></address>
 <p class="ridge"></p>
 </center>
 
-<center>
-<!-- Start of StatCounter Code for Default Guide -->
+<!-- Default Statcounter code for Homepage-OSU
+https://www.asc.ohio-state.edu/zhang.7824/ -->
 <script type="text/javascript">
-var sc_project=8308953; 
-var sc_invisible=0; 
-var sc_security="082ad05d"; 
+var sc_project=12753292; 
+var sc_invisible=1; 
+var sc_security="d33e8ad1"; 
 </script>
 <script type="text/javascript"
-src="http://www.statcounter.com/counter/counter.js"></script>
-<noscript><div class="statcounter"><a title="stat tracker
-for tumblr" href="http://statcounter.com/tumblr/"
-target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/8308953/0/082ad05d/0/"
-alt="stat tracker for tumblr"></a></div></noscript><br>
-<!-- End of StatCounter Code for Default Guide -->
-</center>
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12753292/0/d33e8ad1/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+
 
 </body>
 
