--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Biostatistics, 2023
 
 <li>
 <span style="COLOR: BLACK">Asymptotic theory in bipartite graph models with a growing number of parameters</span>
-[<a href="Fan-bipartite-2022.pdf", style="text-decoration: none">PDF</a>]
+[<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/cjs.11735", style="text-decoration: none">PDF</a>]
 <br>
 <span style="COLOR: #000080">Yifan Fan, Binyan Jiang, Ting Yan and Yuan Zhang</span><br>
 Canadian Journal of Statistics, 2023
@@ -274,7 +274,7 @@ Canadian Journal of Statistics, 2023
 
 <li>
 <span style="COLOR: BLACK">Time-varying &beta;-model for dynamic directed networks</span>
-[<a href="dynamicbetamodel.pdf", style="text-decoration: none">PDF</a>]
+[<a href="https://arxiv.org/abs/2304.02421", style="text-decoration: none">PDF</a>]
 <br>
 <span style="COLOR: #000080">Yuqing Du, Lianqiang Qu, Ting Yan and Yuan Zhang</span><br>
 Scandinavian Journal of Statistics, 2023
@@ -339,7 +339,7 @@ Electronic Journal of Statistics, 2016
 
 <li>
 <span style="COLOR: BLACK">Joint Registration and Conformal Prediction for Partially Observed Functional Data</span>
-[<a href="Functional_CP_compressed.pdf", style="text-decoration: none">PDF</a>] <br>
+[<a href="https://arxiv.org/abs/2502.15000", style="text-decoration: none">PDF</a>] <br>
 <span style="COLOR: #000080">Fangyi Wang, Sebastian Kurtek and Yuan Zhang</span><br>
 In submission<br>
 </li>
