--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ p.hidden {border-style:hidden;}
 <br>
 <span style="COLOR: #000080">Meijia Shao, Dong Xia and Yuan Zhang</span><br><br>
 Part I of this paper published as:<br>
-<span style="COLOR: BLACK">U-statistic reduction: higher-order accurate risk control and statistical-computational trade-off</span> [<a href="Shao_Xia_Zhang_U_statistic_reduction.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/JASA-TM-2022-0839", style="text-decoration: none">Code</a>]<br> 
+<span style="COLOR: BLACK">U-statistic reduction: higher-order accurate risk control and statistical-computational trade-off</span> [<a href="yzhanghf.github.io/Shao_Xia_Zhang_U_statistic_reduction.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/JASA-TM-2022-0839", style="text-decoration: none">Code</a>]<br> 
 <span style="COLOR: #000080">Meijia Shao, Dong Xia and Yuan Zhang</span><br>
 <span style="BACKGROUND-COLOR: #10147e; COLOR: #f4f5f9">Journal of the American Statistical Association</span>, In press, 2025+
 </li>
