--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Part I of this paper published as:<br>
 <br>
 
 <li>
-<span style="COLOR: BLACK">Edgeworth expansions for network moments</span> [<a href="AOS-2125.pdf", style="text-decoration: none">PDF</a>]
+<span style="COLOR: BLACK">Edgeworth expansions for network moments</span> [<a href="yzhanghf.github.io/AOS-2125.pdf", style="text-decoration: none">PDF</a>]
 [<a href="https://github.com/yzhanghf/NetworkEdgeworthExpansion/blob/main/Network-Method-of-Moments.pdf", style="text-decoration: none">Slides</a>]
 <!--"https://www.e-publications.org/ims/submission/AOS/user/submissionFile/45658?confirm=534c87eb"-->
 [<a href="https://github.com/yzhanghf/NetworkEdgeworthExpansion", style="text-decoration: none">MATLAB code</a>]
@@ -149,7 +149,7 @@ Part I of this paper published as:<br>
 
 <li>
 <span style="COLOR: BLACK">Estimating network edge probabilities by neighborhood smoothing</span>
-[<a href="main.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/NeighborhoodSmoothing", style="text-decoration: none">MATLAB code</a>] [<a href="https://github.com/yunjhongwu/matrix-routines", style="text-decoration: none">Python code</a> (by Yun-Jhong Wu)]
+[<a href="yzhanghf.github.io/main.pdf", style="text-decoration: none">PDF</a>] [<a href="https://github.com/yzhanghf/NeighborhoodSmoothing", style="text-decoration: none">MATLAB code</a>] [<a href="https://github.com/yunjhongwu/matrix-routines", style="text-decoration: none">Python code</a> (by Yun-Jhong Wu)]
 <br> 
 <span style="COLOR: #000080">Yuan Zhang, Elizaveta Levina and Ji Zhu</span><br>
 Student Paper Award, 2016 American Statistical Association Section on Nonparametric Statistics<br>
